# BF-Memory

./: CMakeLists.txt  LICENSE  README.md  memory.natvis
include/bf/memory/: basic_allocators.hpp  bf_allocators.hpp  bf_crt_allocator.hpp  bf_freelist_allocator.hpp  bf_imemory_manager.hpp  bf_linear_allocator.hpp  bf_memory_utils.h  bf_pool_allocator.hpp  bf_proxy_allocator.hpp  bf_stack_allocator.hpp  bf_stl_allocator.hpp  crt_allocator.hpp  memory_api.hpp  scoped_buffer.hpp  stl_allocator.hpp
include/memory/: alignment.hpp  allocation.hpp  assertion.hpp  basic_types.hpp  default_heap.hpp  fixed_mt_allocators.hpp  fixed_st_allocators.hpp  growing_st_allocators.hpp  memory_api.hpp  memory_manager.hpp  scoped_buffer.hpp  smart_pointer.hpp  stl_allocator.hpp
src/: alignment.cpp  assertion.cpp  basic_allocators.cpp  bf_allocators.cpp  bf_crt_allocator.cpp  bf_freelist_allocator.cpp  bf_imemory_manager.cpp  bf_linear_allocator.cpp  bf_memory_utils.c  bf_pool_allocator.cpp  bf_proxy_allocator.cpp  bf_stack_allocator.cpp  crt_allocator.cpp  default_heap.cpp  fixed_mt_allocators.cpp  fixed_st_allocators.cpp  growing_st_allocators.cpp  memory_api.cpp
